@@ -212,7 +212,7 @@ class Provider(kodion.AbstractProvider):
         page_token = context.get_param('page_token', '')
 
         # no caching
-        json_data = self.get_client(context).get_playlists(channel_id, page_token)
+        json_data = self.get_client(context).get_playlists_of_channel(channel_id, page_token)
         if not v3.handle_error(self, context, json_data):
             return False
         result.extend(v3.response_to_items(self, context, json_data))
