@@ -1,4 +1,5 @@
 5.1.0~beta6 (2015-04-05)
+FIX: script error while adding video to a playlist
 
 5.1.0~beta5 (2015-04-03)
 ADD: 'More Links from the description' - extracts furthur links from the description
